--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     </div>
 
 
-                    <div class="sociall text-center">
+                    <div class="sociall ">
                         <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i>  </a>
                         <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i>  </a>
                         <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i>  </a>
@@ -109,11 +109,7 @@
                         <a href="#"><i class="fa fa-behance" aria-hidden="true"></i>  </a>
                         <a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i>  </a>
                     </div>
-                    <div class="bounce-downn text-center">
-                        <a class="home-down bounce " href="#About-sec"><i class="fa fa-angle-down"></i></a></div>
-
-
-                </div>
+                    
             </div>
         </div>
     </div>
