--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                                 WELCOME! I'M
 
                             </div>
-                            <div class="info-1-2"> <span class="element" data-text1="NEMO HOSSAM" data-text2="NEMO HOSSAM" data-loop="true" data-backdelay="4000"></span></div>
+                            <div class="info-1-2"> <span class="element" data-text1="NEMO HOSSAM" data-text2="NEMO HOSSAM" data-loop="true" data-backdelay="2000"></span></div>
                             <div class="info-1-3">
                                 WEB DEVELOPER & UX DESIGNER
 
@@ -90,8 +90,8 @@
 
 
 
-                        <div class="info-2">
-                            The namics of how users interact with interactive elements within a user<br> interface flow chart based on container proportion.
+                        <div class="info-2 ">
+                            The namics of how users interact with interactive elements within a user interface flow chart based on container proportion.
                         </div>
 
                         <div class="info-3">
@@ -109,7 +109,12 @@
                         <a href="#"><i class="fa fa-behance" aria-hidden="true"></i>  </a>
                         <a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i>  </a>
                     </div>
-                    
+                    <div class="bounce-downn ">
+                        <a class="home-down bounce " href="#About-sec"><i class="fa fa-angle-double-down
+"></i></a></div>
+
+
+                </div>
             </div>
         </div>
     </div>
@@ -578,6 +583,8 @@
 
     <script src="js/jquery-3.1.1.min.js"></script>
     <script src="js/smoothscroll.js"></script>
+    <script src="js/jquery.nicescroll.min.js"></script>
+
 
     <script src="js/bootstrap.min.js"></script>
     <script src=" https //cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
@@ -585,7 +592,6 @@
     <script src=" js/particles.js"></script>
     <script src=" js/typed.js"></script>
     <script src="js/blugin.js"></script>
-    <script src="js/jquery.nicescroll.min.js"></script>
 
 
 
