--- a/index.html
+++ b/index.html
@@ -138,7 +138,11 @@
             <div class="row">
                 <div class="col-md-4 col-md-offset-1 col-xs-12 ">
                     <div class="my-imge">
-                        <img src="images/nnno.jpeg" />
+                        <div class="img-1">
+                            <img src="images/nnno.jpeg" />
+                        </div>
+                        <div class="img-2">
+                        </div>
                     </div>
                 </div>
 
@@ -592,10 +596,3 @@
     <script src=" js/particles.js"></script>
     <script src=" js/typed.js"></script>
     <script src="js/blugin.js"></script>
-
-
-
-
-</body>
-
-</html>
