--- a/index.html
+++ b/index.html
@@ -30,10 +30,23 @@
 <body id="home-page">
     <!--Start home page-->
 
+<!--start scroll up-->
+<button id="btnUp">
+    <a href="#home-page">
+        <i class="fa fa-angle-up fa-3x"></i>
+        </a>
+</button>
+<!--End scroll up-->
 
-
+<!--Start loading scrren-->
+<section id="loadingS">
+    <div class="spinner">
+        <div class="double-bounce1"></div>
+        <div class="double-bounce2"></div>
+      </div>
+</section>
     <!--start nav-->
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-default navbar-fixed-top" >
 
         <div class="container">
 
