updates and fixed errors

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>Nemo</title>
     <!-- IE intrnet explore-->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="shortcut icon" href="images/1902261-20.png">
+    <link rel="shortcut icon" href="images/">
 
     <!--first mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="images/1902261-20.png">
+    <link rel="shortcut icon" href="images/">
     <link rel="stylesheet" href="css/bootstrap.css" />
     <link rel="stylesheet" href="css/font-awesome.min.css" />
     <link rel="stylesheet" href="css/style.css" />
@@ -604,6 +604,7 @@
 
 
     <script src="js/bootstrap.min.js"></script>
+    
     <script src=" https //cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script src=" https://threejs.org/examples/js/libs/stats.min.js"></script>
     <script src=" js/particles.js"></script>
